<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">
    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="3dp"
            android:layout_marginEnd="3dp"
            android:orientation="vertical">


        <ImageView
            android:id="@+id/imageView"
            android:layout_width="125dp"
            android:layout_height="77dp"
            android:layout_marginTop="8dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:elevation="10dp"
            app:layout_constraintVertical_bias="0.081"
            app:srcCompat="@drawable/logo" />




        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="6dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/signin"
            android:textSize="25dp"
            android:textStyle="bold"
            android:elevation="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.226" />



        <EditText
            android:id="@+id/editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:gravity=""
            android:padding="10dp"
            android:elevation="10dp"
            android:layout_marginBottom="5dp"
            android:background="@drawable/boundary2"
            android:hint="@string/emailhint"
            android:layout_gravity="center_horizontal"
            android:inputType="textEmailAddress"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.353"
            android:drawablePadding="10dp"
            android:drawableLeft="@drawable/ic_avatar"/>


        <EditText
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:padding="10dp"
            android:background="@drawable/boundary2"
            android:layout_gravity="center_horizontal"
            android:hint="@string/passhint"
            android:layout_marginBottom="10dp"
            android:inputType="textPassword"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.522"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.472"
            android:drawablePadding="10dp"
            android:elevation="10dp"
            android:drawableLeft="@drawable/ic_locked" />


            <Button
                android:id="@+id/button2"
                android:layout_width="match_parent"
                android:layout_marginTop="8dp"
                android:layout_height="wrap_content"
                android:background="@drawable/inputbackground"
                android:text="@string/login"
                android:layout_marginBottom="10dp"
                android:layout_gravity="center"
                android:elevation="10dp"
                android:textColor="@color/white" />

        <TextView
             android:id="@+id/signup"
             android:layout_width="wrap_content"
             android:layout_height="27dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_gravity="center_horizontal"
             android:text="@string/register"
            android:textSize="20dp"
            android:textColor="@color/themeColor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.53"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.691" />



            <!--<com.google.android.gms.common.SignInButton
               android:id="@+id/bn_login"
               android:layout_width="258dp"
               android:layout_height="wrap_content"
               android:layout_marginStart="8dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="8dp"
               android:layout_gravity="center_horizontal"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.554"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.801" />

          <com.facebook.login.widget.LoginButton
               android:id="@+id/fb_login_button"
               android:layout_width="252dp"
               android:layout_height="26dp"
               android:layout_marginStart="5dp"
               android:layout_marginTop="8dp"
               android:layout_marginEnd="8dp"
               android:layout_gravity="center_horizontal"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintHorizontal_bias="0.543"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               app:layout_constraintVertical_bias="0.88" />-->
    </LinearLayout>
    </ScrollView>


</LinearLayout>

